# mulm

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
src/: config.rs  err.rs  list.rs  main.rs  send.rs
test-data/: .gitignore  bad.mail  subscribe.mail  test.mail  unsubscribe.mail
test-data/test.list/: config.toml
