[package]
name = "mulm"
version = "0.1.0"
authors = ["Aria Stewart <aredridel@dinhe.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "^0.4.2"
mailparse = "^0.12.1"
serde = { version = "^1.0.114", features = ["derive"] }
toml = "^0.5.6"
byteorder = "^1.3.4"
maildir = "^0.4.2"

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
incremental = false
